force-app/main/default/objects/AC_Skill_Needed__c/AC_Skill_Needed__c.object-meta.xml
<CustomObject>
    <label>AC Skill Needed</label>
    <nameField>
        <label>AC Skill Needed Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Skills Needed</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>