force-app/main/default/objects/AC_Skill_Needed__c/fields/Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Appointment</label>
    <referenceTo>AC_Service_Appointment__c</referenceTo>
    <relationshipLabel>Skills Needed</relationshipLabel>
    <relationshipName>Skills_Needed</relationshipName>
    <type>Lookup</type>
</CustomField>