force-app/main/default/objects/AC_Skill_Needed__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skill</label>
    <referenceTo>AC_Skills__c</referenceTo>
    <relationshipLabel>Skills Needed</relationshipLabel>
    <relationshipName>Skills_Needed</relationshipName>
    <type>Lookup</type>
</CustomField>