force-app/main/default/objects/AC_Skill_Needed__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>AC_Work_Order__c</referenceTo>
    <relationshipLabel>Skills Needed</relationshipLabel>
    <relationshipName>Skills_Needed</relationshipName>
    <type>Lookup</type>
</CustomField>